# bed

./: .gitmodules  Cargo.toml  LICENSE.txt  README.md  build.rs  build.sh  checklist.md
bed/: Cargo.toml  build.rs
bed/res/: config.json
bed/res/themes/: ayu-light.json
bed/res/tree-sitter/: CMakeLists.txt
bed/res/tree-sitter/javascript/: highlights.scm
bed/src/: language.rs  lib.rs  theme.rs
bed/src/buffer/: buffer.rs  completion.rs  mgr.rs  mod.rs  styled.rs  types.rs
bed/src/config/: mod.rs
bed/src/font/: freetype.rs  harfbuzz.rs
bed/src/opengl/: mat4.rs  shader.rs
bed/src/style/: color.rs
bed_core/: Cargo.toml
doc/: config_file_format.txt  syntax_elements.txt
ds/: Cargo.toml
ds/src/: hash.rs  lib.rs  util.rs
edit/: Cargo.toml
edit/src/: buffer.rs  inner.rs  lib.rs  point.rs  view.rs  view_state.rs
geom/: Cargo.toml
geom/src/: bbox.rs  lib.rs  point.rs  rect.rs  size.rs  vector.rs
language-client/: Cargo.toml
language-client/src/: api.rs  jsonrpc.rs  language_server_protocol.rs  lib.rs  types.rs  uri.rs
res/: config.json
res/themes/: ayu-light.json  ayu-mirage.json
res/tree-sitter/c/: highlights.scm
res/tree-sitter/cpp/: highlights.scm
res/tree-sitter/css/: highlights.scm
res/tree-sitter/html/: highlights.scm
res/tree-sitter/python/: highlights.scm
res/tree-sitter/rust/: highlights.scm
rope/: Cargo.toml
rope/res/: test1.txt  test2.txt
rope/src/: builder.rs  cow_box.rs  iter.rs  lib.rs  node.rs  rope.rs  slice.rs  take_mut.rs
rope/tests/: integration_test.rs
rype/: Cargo.toml
rype/examples/: debug.rs  shape.rs
rype/src/: classdef.rs  cmap.rs  common.rs  coverage.rs  ctx_lookup.rs  direction.rs  error.rs  face.rs  featurelist.rs  features.rs  font_collection.rs  gasp.rs  gdef.rs  glyf.rs  gpos.rs  gsub.rs  head.rs  hhea.rs  hmtx.rs  kern.rs  lib.rs  loca.rs  lookuplist.rs  maxp.rs  os2.rs  rcbuffer.rs  script.rs  scriptlist.rs  ttc.rs  types.rs
shader_src/: shadow.frag
src/: cmdprompt.rs  commands.rs  common.rs  completion_popup.rs  config.rs  hover_popup.rs  input.rs  language.rs  lib.rs  log.rs  main.rs  painter.rs  quad.rs  shapes.rs  theme.rs  ts.rs  window.rs
src/buffer/: buffer.rs  completion.rs  cursor.rs  hlpool.rs  mgr.rs  mod.rs  rope_stuff.rs  styled.rs  types.rs  view.rs
src/buffer/buffer/: editing.rs  mod.rs  movement.rs
src/common/: mod.rs  rope.rs  rope_graphemes.rs
src/config/: mod.rs
src/ds/: mod.rs  range_tree.rs
src/font/: direct_write.rs  fontconfig.rs  freetype.rs  harfbuzz.rs  mod.rs
src/geom/: mod.rs  point.rs  rect.rs  size.rs  vector.rs
src/langserver/: glue.rs  mod.rs  proto.rs
src/langserver/types/: mod.rs  uri.rs
src/language/: mod.rs
src/language_client/: api.rs  jsonrpc.rs  language_server_protocol.rs  mod.rs  types.rs  uri.rs
src/opengl/: mat4.rs  mod.rs  shader.rs  texture.rs  vert_array.rs
src/painter/: glyphrender.rs  mod.rs  quad.rs  shapes.rs
src/painter/shader_src/: colored_quad.frag  colored_quad.vert  (+2 more)
src/project/: mod.rs
src/prompt/: command.rs  mod.rs
src/style/: color.rs  mod.rs  text.rs
src/text/: core_text.rs  directwrite.rs  draw.rs  fontconfig.rs  freetype.rs  harfbuzz.rs  mod.rs  rope_or_str.rs  shaper.rs  tree.rs  types.rs  view.rs
src/textview/: mod.rs  tree.rs  view.rs
src/window/: linux_x11.rs  mod.rs
ui/: Cargo.toml
ui/src/: common.rs  lib.rs
ui_types/: Cargo.toml
ui_types/src/: color.rs  lib.rs  text.rs
utf8/: Cargo.toml
utf8/src/: lib.rs
util/: Cargo.toml
util/src/: lib.rs  range.rs
(+15 files in other folders)
