[package]
name = "bed"
version = "0.0.1"
authors = ["Srimanta Barua <srimanta.barua1@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2"
rype = { path = "rype" }
geom = { path = "geom" }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.18", features = [ "xlib", "xinput" ] }

[profile.release]
opt-level = 3
lto = true
