[package]
name = "bed"
version = "0.0.1"
authors = ["Srimanta Barua <srimanta.barua1@gmail.com>"]
description = "Barua's EDitor"
edition = "2018"


[dependencies]
directories = "2.0"
euclid = "0.22.1"
fnv = "1.0.7"
freetype = "0.7.0"
gl = "0.14.0"
glutin = "0.26.0"
guillotiere = "0.6.0"
harfbuzz-sys = "0.5.0"
lru-cache = "0.1.2"
ropey = "1.2"
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_json = "1.0"
take_mut = "0.2.2"
unicode-script = "0.5.2"
unicode-segmentation = "1.6"
walkdir = "2.3.1"

[target.'cfg(unix)'.dependencies]
servo-fontconfig = "0.5"

[target.'cfg(windows)'.dependencies]
com-wrapper = "0.1.0"
directwrite = "0.3.0-alpha4"
winapi = "0.3.8"

[profile.release]
opt-level = 3
lto = "thin"
