[package]
name = "language-client"
version = "0.0.1"
authors = ["Srimanta Barua <srimanta.barua1@gmail.com>"]
description =  "Client implementation for the language server protocol"
edition = "2018"


[dependencies]
crossbeam-channel = "0.4.2"
directories = "2.0"
fnv = "1.0.6"
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_json = "1.0"
